--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ install:
       fi;
 
     # Use Pyglet alpha to get Py3.3 support
-    # Also install PyQt4 and imaging (PIL or pillow)
+    # Also install PyQt4, GTK (on 2.7), and imaging (PIL or pillow)
     # Test old (insufficient) version of Pyglet on 2.6
     - if [ "${DEPS}" == "full" ]; then
         if [ "${PYTHON}" == "2.6" ]; then
@@ -96,12 +96,12 @@ install:
         else
           pip install -q http://pyglet.googlecode.com/archive/tip.zip;
         fi;
+        travis_retry sudo apt-get -qq -y install libgtkgl2.0-1;
         if [ "${PYTHON}" == "3.3" ]; then
           conda install --yes --quiet -c https://conda.binstar.org/pyzo pyside-pyzo;
-          conda install --yes --quiet pillow;
         fi;
         if [ "${PYTHON}" == "2.7" ]; then
-          travis_retry sudo apt-get -qq -y install python-qt4-gl python-imaging;
+          travis_retry sudo apt-get -qq -y install python-qt4-gl python-gtk2 python-gtkglext1 python-imaging;
         fi;
       fi;
 
